# pdf-narrator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pdf_narrator/: main.py
